--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@astrojs/node": "^9.0.2",
     "@iconify-json/material-symbols": "^1.2.13",
+    "@iconify-json/material-symbols-light": "^1.2.13",
     "@unocss/cli": "^65.4.3",
     "astro": "^5.1.10",
     "unocss": "^65.4.3"
