--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev --port 5945 --host 127.0.0.1",
     "build": "astro build",
-    "preview": "astro preview",
+    "preview": "astro preview --port 5945 --host 127.0.0.1",
     "astro": "astro",
     "lint:fix": "eslint --fix"
   },
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
-    "@kaynooo/utils": "^1.2.4",
+    "@kaynooo/utils": "^1.2.6",
     "@types/bun": "latest",
     "eslint": "^9.19.0",
     "eslint-plugin-astro": "^1.3.1",
