--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "type": "module",
   "module": "index.ts",
   "scripts": {
-    "dev": "astro dev --port 5945 --host 127.0.0.1",
+    "dev": "astro dev --port 5865 --host 127.0.0.1",
     "build": "astro build",
     "preview": "astro preview --port 5945 --host 127.0.0.1",
     "astro": "astro",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "api:dev": "bun run --watch api/index.ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -18,6 +19,7 @@
     "@iconify-json/material-symbols-light": "^1.2.13",
     "@unocss/cli": "^65.4.3",
     "astro": "^5.1.10",
+    "elysia": "^1.2.10",
     "unocss": "^65.4.3"
   },
   "devDependencies": {
