--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "astro preview --port 5945 --host 127.0.0.1",
     "astro": "astro",
     "lint:fix": "eslint --fix",
-    "api:dev": "bun run --watch api/index.ts"
+    "api:dev": "bun run --watch api/index.ts",
+    "api": "bun run api/index.ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
