--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "api": "bun run api/index.ts"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
     "@astrojs/node": "^9.0.2",
@@ -24,13 +24,13 @@
     "unocss": "^65.4.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.16.0",
+    "@antfu/eslint-config": "^4.1.0",
     "@kaynooo/utils": "^1.2.6",
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.1",
     "eslint": "^9.19.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-github": "^5.1.5",
+    "eslint-plugin-github": "^5.1.6",
     "prettier-plugin-astro": "^0.14.1"
   }
 }
