--- a/package.json
+++ b/package.json
@@ -8,30 +8,31 @@
     "preview": "astro preview --port 5945 --host 127.0.0.1",
     "astro": "astro",
     "lint:fix": "eslint --fix",
-    "api:dev": "bun run --watch api/index.ts",
-    "api": "bun run api/index.ts"
+    "api:dev": "bun run --watch api/index.ts --port 1600",
+    "api": "bun run api/index.ts --port 1803"
   },
   "peerDependencies": {
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@astrojs/node": "^9.0.2",
-    "@iconify-json/material-symbols": "^1.2.13",
-    "@iconify-json/material-symbols-light": "^1.2.13",
-    "@unocss/cli": "^65.4.3",
-    "astro": "^5.1.10",
-    "elysia": "^1.2.10",
-    "unocss": "^65.4.3"
+    "@astrojs/node": "9.2.2",
+    "@iconify-json/material-symbols": "^1.2.26",
+    "@iconify-json/material-symbols-light": "^1.2.26",
+    "@unocss/cli": "^66.2.1",
+    "astro": "5.9.3",
+    "elysia": "^1.3.4",
+    "unocss": "^66.2.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.1.0",
-    "@iconify-json/game-icons": "^1.2.1",
-    "@kaynooo/utils": "^1.2.6",
-    "@types/bun": "^1.2.1",
-    "eslint": "^9.19.0",
+    "@antfu/eslint-config": "^4.14.1",
+    "@iconify-json/game-icons": "^1.2.3",
+    "@kaynooo/eslint": "^1.1.7",
+    "@kaynooo/utils": "^1.2.15",
+    "@types/bun": "^1.2.16",
+    "eslint": "^9.29.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-github": "^5.1.6",
+    "eslint-plugin-github": "^6.0.0",
     "prettier-plugin-astro": "^0.14.1"
   }
 }
