--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@astrojs/node": "9.2.2",
     "@iconify-json/material-symbols": "^1.2.26",
     "@iconify-json/material-symbols-light": "^1.2.26",
-    "@unocss/cli": "^66.2.1",
+    "@tailwindcss/vite": "^4.1.10",
     "astro": "5.9.3",
+    "astro-icon": "^1.1.5",
     "elysia": "^1.3.4",
-    "unocss": "^66.2.1"
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
